2014-03-24  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/massive/massive_edit_agents.php,
	godmode/massive/massive_delete_agents.php,
	godmode/groups/group_list.php, include/functions_agents.php,
	include/javascript/jquery.pandora.controls.js,
	operation/agentes/ver_agente.php,
	operation/agentes/estado_monitores.php: added the feature to filter
	by agent status in the massive operations into
	"massive agent deletion" and "massive agent edition".
	
	Incident: #669

2014-03-21  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/constants.php: added lost constant for
	"SERVICE_STATUS_ALERT".

2014-03-21  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.php, include/constants.php,
	include/functions_visual_map.php: added the feature to set the
	parent of items from the wizard.
	
	Incident: #670

2014-03-21  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: uploaded the lost changes in the
	code for to make the link in the group item.

2014-03-20  Miguel de Dios <miguel.dedios@artica.es>
	
	* images/group_green.disabled.png, images/group_green.png,
	extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
	godmode/reporting/visual_console_builder.editor.js,
	godmode/agentes/configurar_agente.php, include/styles/pandora.css,
	include/functions_networkmap.php, include/functions_agents.php,
	include/functions_visual_map_editor.php,
	include/functions_modules.php, include/functions_groups.php,
	include/constants.php, include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php, pandoradb.sql,
	pandoradb.postgreSQL.sql, pandoradb.oracle.sql: added the feature to
	show the item for groups in visualmap.
	
	Incident: #671

2014-03-20  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/snmpconsole/snmp_alert.php,